--- a/Rewrite/Function/vvebo.conf
+++ b/Rewrite/Function/vvebo.conf
@@ -8,9 +8,9 @@
 hostname = api.weibo.com
 
 # ～ fix-vvebo-user-timeline
-^https:\/\/api\.weibo\.cn\/2\/users\/show\? url script-resquest-header https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js
+^https:\/\/api\.weibo\.cn\/2\/users\/show\? url script-request-header https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js
 
-^https:\/\/api\.weibo\.cn\/2\/statuses\/user_timeline\? url script-resquest-header https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js
+^https:\/\/api\.weibo\.cn\/2\/statuses\/user_timeline\? url script-request-header https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js
 
 ^https:\/\/api\.weibo\.cn\/2\/profile\/statuses\/tab\? url script-response-body https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js
 
