--- a/Rewrite/Function/vvebo.conf
+++ b/Rewrite/Function/vvebo.conf
@@ -2,13 +2,14 @@
 // @ScriptName        VVebo修复
 // @Author            @c9a @syr
 // @UpdateTime        2023-01-05
-// @Attention         仅供学习交流 https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js
+// @Attention         仅供学习交流 https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js https://raw.githubusercontent.com/bin64/Scripts/main/QuantumultX/vvebo.js
 
 // ==/UserScript==  
-hostname = api.weibo.com
 
-# ～ fix-vvebo-user-timeline
+[mitm]
+hostname = api.weibo.cn
 
+[rewrite_local]
 ^https:\/\/api\.weibo\.cn\/2\/users\/show\? url script-request-header https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo.js
 ^https:\/\/api\.weibo\.cn\/2\/statuses\/user_timeline\? url script-request-header https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo.js
 ^https:\/\/api\.weibo\.cn\/2\/statuses\/user_timeline\? url script-response-body https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo.js
