--- a/Rewrite/Function/vvebo.conf
+++ b/Rewrite/Function/vvebo.conf
@@ -3,6 +3,7 @@
 // @Author            @c9a @syr
 // @UpdateTime        2023-01-05
 // @Attention         仅供学习交流 https://raw.githubusercontent.com/suiyuran/stash/main/scripts/fix-vvebo-user-timeline.js https://raw.githubusercontent.com/bin64/Scripts/main/QuantumultX/vvebo.js
+// @Other             https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Rewrite/Function/vvebo.conf
 
 // ==/UserScript==  
 
