--- a/Rewrite/Function/vvebo.conf
+++ b/Rewrite/Function/vvebo.conf
@@ -11,7 +11,9 @@ hostname = api.weibo.cn
 
 ^https:\/\/api\.weibo\.cn\/2\/users\/show\? url script-request-header https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo.js
 ^https:\/\/api\.weibo\.cn\/2\/statuses\/user_timeline\? url script-request-header https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo.js
-^https:\/\/api\.weibo\.cn\/2\/statuses\/user_timeline\? url script-response-body https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo.js
+^https:\/\/api\.weibo\.cn\/2\/statuses\/user_timeline\? rl script-response-bodyy https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo.js
+//修复我的页面
+^https:\/\/api\.weibo\.cn\/2\/cardlist\? url script-response-body https://raw.githubusercontent.com/Chang9an/ForOwnUse/main/Script/vvebo_mine.js
 
 
 
